# chess_bot_fr

./: .gitignore  pyproject.toml  requirements.txt
base_cnn_model/: make_prediction.ipynb  play.ipynb
base_cnn_model/predict/: __init__.py  predict.py
base_cnn_model/train/: train_cuda.ipynb
cnn_model/: bot_vs_bot.ipynb  compare_models.py  helper_funcs.py  make_prediction.ipynb  model.py  play.py  predict.py  train.ipynb
cnn_model/predict/: __init__.py  compare_models.py  predict.py
cnn_model/train/: dataset.py  model.py  processing.py  train.ipynb  train_hdf5.ipynb  utils.py
double_head_CNN/: dataset.py  model.py  processing.py  selfplay.py  train.ipynb  train.py  utils.py
models/: mark3_move_to_int.pkl  mark4_move_to_int.pkl
nn_model/: compare_models.py  dataset.py  helper_funcs.py  make_prediction.ipynb  model.py  predict.py  train.ipynb  train_cuda.ipynb
old_files/: comands.trxt
old_files/base_cnn_model/: __init__.py  mark5_move_to_int.pkl
old_files/base_cnn_model/train/: __init__.py  dataset.py  processing_parallel.py  train.ipynb  train_hdf5.ipynb
rust_magic/: Cargo.toml  pyproject.toml
rust_magic/src/: data.rs  game.rs  lib.rs  mcts.rs  neural_net.rs
