[package]
name = "rust_magic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_magic"
crate-type = ["cdylib"]

[dependencies]
# Chess library
chess = "3.2.0"

# PyO3 for Python bindings
pyo3 = { version = "0.17.3", features = ["extension-module"] }

# Tch for neural network inference
tch = { version = "0.6.1" }

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For efficient data structures
indexmap = "1.7.0"

once_cell = "1.17.1"